# mlx-dNCA

./: MLX_OPTIMIZATION_REPORT.md  README.md  boundary_optimization_example.py  cell_division_mlx_optimization.py  kahn.py  main.py  pyproject.toml  tlbm.py
src/: cell.py  config.py  tlbm.py
