[project]
name = "mlx-dnca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "mlx>=0.26.5",
    "numpy>=2.3.1",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "scipy>=1.16.0",
    "vispy>=0.15.2",
]
